# chatty

./: .gitignore  docker-compose.yml
backend/: auth.py  database.py  main.py  models.py  pyproject.toml
backend/schemas/: message.py  user.py
backend/tests/: conftests.py  test_auth.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/auth/: AuthLayout.tsx  LoginForm.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatLayout.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  TypingIndicator.tsx
frontend/src/components/sidebar/: DMsList.tsx  OnlineUsersList.tsx  Sidebar.tsx  UserProfile.tsx
frontend/src/components/ui/: Avatar.tsx
frontend/src/hooks/: useNotifications.ts  useSocket.ts
frontend/src/stores/: chatStore.ts
frontend/src/types/: chat.ts
