[project]
name = "realtime-chat-backend"
version = "0.1.0"
description = "Real-time chat backend with WebSockets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.1",
    "python-socketio>=5.11.0",
    "aioredis>=2.0.1",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "argon2-cffi>=21.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["realtime_chat"]

[tool.ruff]
# Excluir archivos/directorios
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Longitud de línea
line-length = 79

# Versión de Python objetivo
target-version = "py312"

[tool.ruff.lint]
# Reglas a activar
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Reglas a ignorar
ignore = [
    "E501",  # line too long (manejado por el formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
# Usar comillas dobles
quote-style = "double"

# Trailing commas
docstring-code-format = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyclean>=3.1.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.hatch.scripts]
lint = "ruff check ."
format = "ruff format ."
lint-fix = "ruff check --fix" 
